# pubstyle

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
docs/: packaging_guide.md
pubstyle/: __init__.py  _style_config.py  _styles_config.py  cli.py  styles.py  styling.py
