[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pubstyle"
version = "1.0.1"  # Matches setup.py, pyproject.toml will take precedence
description = "Custom Matplotlib styles for publication-quality plots."
readme = "README.md"  # Specifies the file for the long description
requires-python = ">=3.7"
license = {text = "MIT License"}  # Or use license = { file = "LICENSE.md" } if you have a LICENSE file
authors = [
    {name = "Sangjin Lee", email = "sangjin.lee1012@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Visualization",
    "Framework :: Matplotlib",
]
dependencies = [
    "matplotlib>=3.3",
]

[project.urls]
Homepage = "https://github.com/23jinny/pubstyle"

[project.scripts]
"pubstyle-cli" = "pubstyle.cli:main"

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

